# clipper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
include/: clip.hpp  clipper.hpp
src/: clip.cpp  clip.hpp  clip_error.cpp
tests/: ClipperTest.cpp  OptionTest.cpp  predicate_test.cpp
