cmake_minimum_required(VERSION 3.30.3)
project(clip)

include_directories(${PROJECT_BINARY_DIR})


# set(SOURCE_FILES
# )
# set(FLAGS)

# add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})

# set_target_properties(${PROJECT_NAME} PROPERTIES
# CXX_STANDARD 23
# CXX_STANDARD_REQUIRED ON
# )

# target_compile_options(${PROJECT_NAME} PRIVATE ${FLAGS})